// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`built-in-programs > 0d0e0860-0555-4b43-bd93-350edd49c6bd migrates to a stable weighted shape 1`] = `
[
  {
    "name": "Pushups",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "29115c48-0f60-5abf-848f-3a0173da61ad_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Dips",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "09bf7cb9-edad-5850-b9ba-6bca3f37d5b4_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Handstand Pushups",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "7567c128-2e80-5a19-9c5b-c769c57b94d8_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Pullups",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "12993268-9750-57c7-a288-02a37488eb73_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Chinups",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "d9c23c6b-46ed-539d-942e-56e1a7a5ebcb_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Inverted Rows",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "24be34a5-686a-5909-8a64-aacc4696a1e2_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Squats",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "7653527a-1236-54e8-ad09-b24f7285d32f_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Lunges",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "d727ecb5-0de5-5364-b82d-a6c49660d469_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Calf Raises",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "39a9101b-c78d-5936-8bb4-8237b138990b_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
]
`;

exports[`built-in-programs > 590a285b-f883-4536-a1ce-cdc9e2d90399 migrates to a stable weighted shape 1`] = `[]`;

exports[`built-in-programs > 890a285b-f883-4536-a1ce-cbc9e2d90399 migrates to a stable weighted shape 1`] = `
[
  {
    "name": "Pushups",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "29115c48-0f60-5abf-848f-3a0173da61ad_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Dips",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "09bf7cb9-edad-5850-b9ba-6bca3f37d5b4_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Handstand Pushups",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "7567c128-2e80-5a19-9c5b-c769c57b94d8_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Planche Pushups",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "50a5b3dc-c82b-5f5d-8fca-a6602e4d2790_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Pullups",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "12993268-9750-57c7-a288-02a37488eb73_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Chinups",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "d9c23c6b-46ed-539d-942e-56e1a7a5ebcb_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Inverted Rows",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "24be34a5-686a-5909-8a64-aacc4696a1e2_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Muscle Ups",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "aa6b4f88-93ec-57c1-b382-d51de03b4884_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Squats",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "7653527a-1236-54e8-ad09-b24f7285d32f_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Lunges",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "d727ecb5-0de5-5364-b82d-a6c49660d469_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Calf Raises",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "39a9101b-c78d-5936-8bb4-8237b138990b_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Pistol Squats",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [],
    "progressionKey": "69a0f74a-b9fb-5d14-9c38-01c391acf964_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
]
`;

exports[`built-in-programs > 5072c29e-1de9-44e0-865f-f65a15e860f7 migrates to a stable weighted shape 1`] = `
[
  {
    "name": "Bench Press",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "c6660c24-caf0-5fe3-aa61-1de06802a7c2_WeightedExerciseBlueprint_3_5",
    "resistance": "external",
  },
  {
    "name": "Barbell Row",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "81d3367a-2947-5c16-8c1d-6ed60c9c233a_WeightedExerciseBlueprint_3_5",
    "resistance": "external",
  },
  {
    "name": "Overhead Press",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "b25b42e8-0023-559d-bc28-5e3d4e24319b_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Lat Pulldown",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "615e7c22-bb0c-59dd-872d-ef64f08fbbf8_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Barbell Curl",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "76e34967-b12e-51be-a577-6cc2ac812295_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Tricep Extension",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "f9b88d65-cd9e-596a-a6dd-f7f5cd5dce17_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Cable Fly",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "8afdebd3-746f-5b23-8353-c4e176ba3ba3_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Squat",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "7653527a-1236-54e8-ad09-b24f7285d32f_WeightedExerciseBlueprint_3_5",
    "resistance": "external",
  },
  {
    "name": "Deadlift",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "8072a5f5-4fa1-5729-b397-661b365f9c03_WeightedExerciseBlueprint_3_5",
    "resistance": "external",
  },
  {
    "name": "Leg Press",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "eda1e55c-feaa-5c92-8b58-cf8650a343e6_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Leg Curl",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "e428853e-9ac5-5583-a5b9-bb8bd405cf92_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Calf Raise",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "c30d832e-d0ab-5dbb-a625-bdfaa9e6544e_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Incline Bench Press",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "854d5776-23d3-5f25-8bc8-04d32b6d20a8_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Cable Row",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "231cbe84-9b7f-54ee-8fee-0b8e1a10e072_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Dumbbell Fly",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "7f5d0ed8-2733-5eb5-8312-38c039d0f42c_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Lat Pulldown",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "615e7c22-bb0c-59dd-872d-ef64f08fbbf8_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Dumbbell Curl",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "0863cafa-ea63-52e4-8da4-b212f8edbd71_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Skullcrusher",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "10d51429-2adb-5894-bbfd-e1133b33226d_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Front Squat",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "4d9f3e41-beda-58fa-a20a-8f0696176a1d_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Romanian Deadlift",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "51d0c806-ee61-55b7-97ad-83dcd9236094_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Leg Extension",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "b47f438e-8a3b-5eef-9d18-588348f48599_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Leg Curl",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "e428853e-9ac5-5583-a5b9-bb8bd405cf92_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
  {
    "name": "Calf Raise",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 10,
          "min": 10,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "c30d832e-d0ab-5dbb-a625-bdfaa9e6544e_WeightedExerciseBlueprint_3_10",
    "resistance": "external",
  },
]
`;

exports[`built-in-programs > 347607f0-67b8-4051-bfc2-3b73fccf92d8 migrates to a stable weighted shape 1`] = `
[
  {
    "name": "Bench Press",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "c6660c24-caf0-5fe3-aa61-1de06802a7c2_WeightedExerciseBlueprint_4_8",
    "resistance": "external",
  },
  {
    "name": "Overhead Press",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "b25b42e8-0023-559d-bc28-5e3d4e24319b_WeightedExerciseBlueprint_4_8",
    "resistance": "external",
  },
  {
    "name": "Tricep Extension",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "f9b88d65-cd9e-596a-a6dd-f7f5cd5dce17_WeightedExerciseBlueprint_4_8",
    "resistance": "external",
  },
  {
    "name": "Cable Fly",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "8afdebd3-746f-5b23-8353-c4e176ba3ba3_WeightedExerciseBlueprint_4_8",
    "resistance": "external",
  },
  {
    "name": "Deadlift",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "8072a5f5-4fa1-5729-b397-661b365f9c03_WeightedExerciseBlueprint_4_8",
    "resistance": "external",
  },
  {
    "name": "Barbell Row",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "81d3367a-2947-5c16-8c1d-6ed60c9c233a_WeightedExerciseBlueprint_4_8",
    "resistance": "external",
  },
  {
    "name": "Lat Pulldown",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "615e7c22-bb0c-59dd-872d-ef64f08fbbf8_WeightedExerciseBlueprint_4_8",
    "resistance": "external",
  },
  {
    "name": "Barbell Curl",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "76e34967-b12e-51be-a577-6cc2ac812295_WeightedExerciseBlueprint_4_8",
    "resistance": "external",
  },
  {
    "name": "Squat",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "7653527a-1236-54e8-ad09-b24f7285d32f_WeightedExerciseBlueprint_4_8",
    "resistance": "external",
  },
  {
    "name": "Lunges",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "d727ecb5-0de5-5364-b82d-a6c49660d469_WeightedExerciseBlueprint_4_8",
    "resistance": "external",
  },
  {
    "name": "Leg Extension",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "b47f438e-8a3b-5eef-9d18-588348f48599_WeightedExerciseBlueprint_4_8",
    "resistance": "external",
  },
  {
    "name": "Leg Curl",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 8,
          "min": 8,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "e428853e-9ac5-5583-a5b9-bb8bd405cf92_WeightedExerciseBlueprint_4_8",
    "resistance": "external",
  },
]
`;

exports[`built-in-programs > a303c855-9ed7-4ff8-ae60-11e9a573193e migrates to a stable weighted shape 1`] = `
[
  {
    "name": "Squat",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "7653527a-1236-54e8-ad09-b24f7285d32f_WeightedExerciseBlueprint_3_5",
    "resistance": "external",
  },
  {
    "name": "Bench Press",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "c6660c24-caf0-5fe3-aa61-1de06802a7c2_WeightedExerciseBlueprint_3_5",
    "resistance": "external",
  },
  {
    "name": "Deadlift",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "8072a5f5-4fa1-5729-b397-661b365f9c03_WeightedExerciseBlueprint_1_5",
    "resistance": "external",
  },
  {
    "name": "Squat",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "7653527a-1236-54e8-ad09-b24f7285d32f_WeightedExerciseBlueprint_3_5",
    "resistance": "external",
  },
  {
    "name": "Overhead Press",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "b25b42e8-0023-559d-bc28-5e3d4e24319b_WeightedExerciseBlueprint_3_5",
    "resistance": "external",
  },
  {
    "name": "Deadlift",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "8072a5f5-4fa1-5729-b397-661b365f9c03_WeightedExerciseBlueprint_1_5",
    "resistance": "external",
  },
]
`;

exports[`built-in-programs > ac80c322-3c0f-42ba-b837-cd998adee25a migrates to a stable weighted shape 1`] = `
[
  {
    "name": "Squat",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "7653527a-1236-54e8-ad09-b24f7285d32f_WeightedExerciseBlueprint_5_5",
    "resistance": "external",
  },
  {
    "name": "Bench Press",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "c6660c24-caf0-5fe3-aa61-1de06802a7c2_WeightedExerciseBlueprint_5_5",
    "resistance": "external",
  },
  {
    "name": "Barbell Row",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "81d3367a-2947-5c16-8c1d-6ed60c9c233a_WeightedExerciseBlueprint_5_5",
    "resistance": "external",
  },
  {
    "name": "Squat",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "7653527a-1236-54e8-ad09-b24f7285d32f_WeightedExerciseBlueprint_5_5",
    "resistance": "external",
  },
  {
    "name": "Overhead Press",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "2.5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "b25b42e8-0023-559d-bc28-5e3d4e24319b_WeightedExerciseBlueprint_5_5",
    "resistance": "external",
  },
  {
    "name": "Deadlift",
    "plannedSets": [
      {
        "kind": "working",
        "reps": {
          "max": 5,
          "min": 5,
        },
      },
    ],
    "progression": [
      {
        "axis": "load",
        "scope": {
          "type": "allSets",
        },
        "step": "5",
        "trigger": "allSetsMetTarget",
      },
    ],
    "progressionKey": "8072a5f5-4fa1-5729-b397-661b365f9c03_WeightedExerciseBlueprint_1_5",
    "resistance": "external",
  },
]
`;
